Add divs, img, and ps for template book entry

--- a/odin-library-app/index.html
+++ b/odin-library-app/index.html
@@ -7,5 +7,16 @@
     <script src="app.js" defer></script>
 </html>
 <body>
-    
+    <div class="display-container">
+        <div class="book-wrapper" name="book-1">
+            <img src="/images/stillness-is-the-key.jpg" alt="">
+            <div class="book-details">
+                <p class="title">Stillness is the Key</p>
+                <p class="author">Ryan Holiday</p>
+                <p class="number-pages">198</p>
+                <label for="read-status">Read?</label>
+                <input type="checkbox" name="read-status" id="">
+            </div>
+        </div>
+    </div>
 </body>
