--- a/odin-library-app/index.html
+++ b/odin-library-app/index.html
@@ -8,15 +8,28 @@
 </html>
 <body>
     <div class="display-container">
-        <div class="book-wrapper" name="book-1">
-            <img src="/images/stillness-is-the-key.jpg" alt="">
-            <div class="book-details">
-                <p class="title">Stillness is the Key</p>
-                <p class="author">Ryan Holiday</p>
-                <p class="number-pages">198</p>
-                <label for="read-status">Read?</label>
-                <input type="checkbox" name="read-status" id="">
-            </div>
-        </div>
+        <!-- <div class="book-wrapper" name="book-1">
+                <img src="/images/stillness-is-the-key.jpg" alt="">
+                <div class="book-details">
+                    <p class="title">Stillness is the Key</p>
+                    <p class="author">Ryan Holiday</p>
+                    <p class="number-pages">198</p>
+                    <label for="read-status">Read?</label>
+                    <input type="checkbox" name="read-status" id="">
+                </div>
+            </div> -->
     </div>
+    <!-- <dialog> -->
+        <form action="" class="book-form">
+            <label for="book-title">Enter the title:</label>
+            <input type="text" name="book-title" id="book-title">
+            <label for="book-author">Enter the author:</label>
+            <input type="text" name="book-author" id="book-author">
+            <label for="book-pages">Enter the number of pages:</label>
+            <input type="text" name="book-pages" id="book-pages">
+            <label for="book-read">Have you read the book?
+                <input type="checkbox" name="book-read" id="book-read">
+            </label>
+        </form>
+    <!-- </dialog> -->
 </body>
