Add div with submit and close buttons to the form

--- a/odin-library-app/index.html
+++ b/odin-library-app/index.html
@@ -30,6 +30,10 @@
             <label for="book-read">Have you read the book?
                 <input type="checkbox" name="book-read" id="book-read">
             </label>
+            <div class="form-buttons">
+                <button>Submit</button>
+                <button>Close</button>
+            </div>
         </form>
     <!-- </dialog> -->
 </body>
