--- a/odin-library-app/index.html
+++ b/odin-library-app/index.html
@@ -19,8 +19,8 @@
                 </div>
             </div> -->
     </div>
-    <!-- <dialog> -->
-        <form action="" class="book-form">
+    <!-- <dialog id="dialogEl"> -->
+        <form action="" id="book-form">
             <label for="book-title">Enter the title:</label>
             <input type="text" name="book-title" id="book-title">
             <label for="book-author">Enter the author:</label>
@@ -31,8 +31,8 @@
                 <input type="checkbox" name="book-read" id="book-read">
             </label>
             <div class="form-buttons">
-                <button>Submit</button>
-                <button>Close</button>
+                <button id="submitBtn">Submit</button>
+                <button value="cancel" formmethod="dialog">Close</button>
             </div>
         </form>
     <!-- </dialog> -->
