Uncomment out dialog element, add btn for new book

--- a/odin-library-app/index.html
+++ b/odin-library-app/index.html
@@ -19,7 +19,7 @@
                 </div>
             </div> -->
     </div>
-    <!-- <dialog id="dialogEl"> -->
+    <dialog id="dialogEl">
         <form action="" id="book-form">
             <label for="book-title">Enter the title:</label>
             <input type="text" name="book-title" id="book-title">
@@ -35,5 +35,6 @@
                 <button value="cancel" formmethod="dialog">Close</button>
             </div>
         </form>
-    <!-- </dialog> -->
+    </dialog>
+    <button id="addNewBook">Add New Book</button>
 </body>
